added endpoint auth/login
