# internal/controllers/controller.go
@@ -72,3 +72,27 @@ func Register(c *fiber.Ctx) error {
 
 	return c.Status(201).SendString("User added")
 }
+
+// Login godoc
+// @Summary Login
+// @Description login a user
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Param Login body models.Login true "User login details"
+// @Success 200 {string} string "JWT"
+// @Failure 500 {string} string "Bad server"
+// @Failure 400 {string} string "Bad request"
+// @Router /auth/login [post]
+func Login(c *fiber.Ctx) error {
+	var login models.Login
+	if err := c.BodyParser(&login); err != nil {
+		return c.Status(400).SendString("Bad request")
+	}
+
+	if err := analytics.Login(login); err != nil {
+		return c.Status(500).SendString("Bad server")
+	}
+
+	return c.SendString("JWT")
+}
